----------------------------------------------------------------------
 OmegaT 2.1.8 update 2
----------------------------------------------------------------------
  3 Enhancements
  2 Bugfixes
----------------------------------------------------------------------
2.1.8 update 2 vs. 2.1.8 update 1

  Other enhancements:

  - Swedish localisation updated to 2.1.8 (UI, Readme)
  - Italian localisation updated to 2.1.8 (UI, Readme, Instant Start)
  - Dutch localisation updated to 2.1.8 (UI, Readme, Instant Start, documentation)

  Bug fixes:

  - Still some corrections about the highlight of the search results

  - Rc filter: Correction on the handling of comments and includes

----------------------------------------------------------------------
 OmegaT 2.1.8 update 1
----------------------------------------------------------------------
  1 Enhancement
  1 Bugfix
----------------------------------------------------------------------
2.1.8 update 1 vs. 2.1.8

  Other enhancements:

  - SVG image filter

  Bug fixes:

  - Some advanced search parameters were not working properly

----------------------------------------------------------------------
 OmegaT 2.1.8 
----------------------------------------------------------------------
  3 Enhancements
  0 Bugfix
----------------------------------------------------------------------
2.1.8 vs. 2.1.7 update 3

  Implemented requests:

  - Aggregate OpenXML tags
  http://sourceforge.net/support/tracker.php?aid=3036227

  Other enhancements:

  - Italian localisation updated to 2.1.7 (UI, Readme, Instant Start)
  - Spanish localisation updated to 2.1.7 (UI, Readme, Instant Start, documentation)

----------------------------------------------------------------------
 OmegaT 2.1.7 update 3
----------------------------------------------------------------------
  2 Enhancements
  5 Bugfixes
----------------------------------------------------------------------
2.1.7 update 3 vs. 2.1.7 update 2

  Implemented requests:
